Fix social icons on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -526,4 +526,8 @@ a:hover {
   .more-stuff:after {
     content: none;
   }
+
+  .icon i {
+    font-size: 20px;
+  }
 }
